--- a/nms/nms/report/project_planning_and_cost/project_planning_and_cost.html
+++ b/nms/nms/report/project_planning_and_cost/project_planning_and_cost.html
@@ -37,7 +37,13 @@
     </style>
 </head>
 <body>
-
+    
+  
+<b>From Date: {{ filters.from_date }}
+<br>To Date: {{ filters.to_date }}
+<br>Project: {{ filters.project }}
+</b>
+<br>
     <div class="main-header">PER DAY ESTIMATION SHEET</div>
 
     <table>
